change name to vertex, add avax and link pools

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,500;0,900;1,200&display=swap" rel="stylesheet">
 
     <!-- Meta -->
-    <title>PolyVertex Finance</title>
+    <title>Vertex Finance</title>
     <meta
       name="description"
       content="A community-driven yield farm native to Polygon"
